--- a/Quote-Generator/src/App.css
+++ b/Quote-Generator/src/App.css
@@ -22,7 +22,7 @@ body{
     justify-content: center;
     border-radius: 8px;
     padding: 25px;
-    background-color: #fff;
+    background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0,0,0,0.3);
 }
 
